Throw the exception when querying resources not empty list